<resources>
    <string name="app_name">BasketBall Score Counter</string>
    <string name="team_a">Team A</string>
    <string name="_0">0</string>
    <string name="_3_point">+3 Point</string>
    <string name="_2_point">+2 Point</string>
    <string name="free_throw">free throw</string>
    <string name="team_b">Team B</string>
    <string name="reset">reset</string>
    <string name="status">Start the game</string>
</resources>